Closed Bug 406877 Opened 17 years ago Closed 17 years ago

nsIAccessible::TakeFocus() on links does not set tab order position

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(Keywords: access)

Attachments

(1 file)

When an AT sets focus on a link, the next tab should move relative to that link. This works for focusable content other than links.
Comment on attachment 291541 [details] [diff] [review]
Use the same methodology that we use in nsAccessible::TakeFocus()

I think to assert mActionContent is a HTML element might be a good idea.
Attachment #291541 - Flags: review?(Evan.Yan) → review+
Attachment #291541 - Flags: approval1.9?
Attachment #291541 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: