Bug 406877. nsIAccessible::TakeFocus() on links does not set tab order position. r=evan.yan, a=dsicore